[package]
name = "termite-server"
version = "0.1.0"
edition = "2024"

[dependencies]
termite-core = { path = "../termite-core" }
tokio = { version = "1", features = ["full"] }
axum = "0.8.8"
tower = "0.5.3"
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"